ArmAClassParser/coco/ebnf.ebnf
using System.Collections.Generic;
using System.IO;
using System.Linq;
using System.Text;
using System.Threading.Tasks;
using System.Windows.Documents;

COMPILER CONFIGFILE
    public FlowDocument doc;
	public ConfigEntry Root;

    CHARACTERS
		DIGIT = "0123456789".
        HEXDIGIT = "0123456789ABCDEFabcdef".
		CHARACTER = "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ".
        ACHARACTER = "!|§$%&/*+-()=?`´#~ß}][{-_".
		OTHER = ANY - '/' - '*'. 
		STRINGCHARS = ANY - '\n' - '\r' - '"'.

	TOKENS
		T_SCALAR = [ '-' ] DIGIT { DIGIT } [ '.' DIGIT { DIGIT } ].
        T_HEX = ("0x" | "0X") HEXDIGIT { HEXDIGIT }.
		T_STRING = '"' { STRINGCHARS | "\"\""} '"'.
        T_STRINGTABLESTRING = '$' { CHARACTER | '_' | DIGIT }.
		T_IDENT = ( CHARACTER | '_' ) { CHARACTER | '_' | DIGIT }.
		
	COMMENTS FROM "/*" TO "*/" NESTED
	COMMENTS FROM "//" TO '\n'
	COMMENTS FROM "#" TO '\n'
	IGNORE '\t' + '\r' + '\n'
		
	PRODUCTIONS
		CONFIGFILE =
			CONFIG<Root>
            {
                CONFIG<Root>
            }
		.
        CONFIG<ConfigEntry parent> (. ConfigEntry cur = Root == null ? null : new ConfigEntry(parent); if(Root != null) cur.IsField = true; .) =
            "class" (. if(Root != null) cur.FullStart = doc.ContentStart.GetPointerFromCharOffset(t.charPos); .)
            T_IDENT (.
				if(Root != null) {cur.NameStart = doc.ContentStart.GetPointerFromCharOffset(t.charPos);
				cur.NameEnd = doc.ContentStart.GetPointerFromCharOffset(t.charPos + t.val.Length);}
			.)
            [
                ':'
                T_IDENT (.
					if(Root != null) {cur.ParentStart = doc.ContentStart.GetPointerFromCharOffset(t.charPos);
					cur.ParentEnd = doc.ContentStart.GetPointerFromCharOffset(t.charPos + t.val.Length);}
				.)
            ]
            [
                '{' (. if(Root != null) cur.ContentStart = doc.ContentStart.GetPointerFromCharOffset(t.charPos + t.val.Length); .)
                {
                    FIELD<cur>
                    |
                    CONFIG<cur>
                }
                '}' (. if(Root != null) cur.ContentEnd = doc.ContentStart.GetPointerFromCharOffset(t.charPos); .)
            ]
            ';' (. if(Root != null) cur.FullEnd = doc.ContentStart.GetPointerFromCharOffset(t.charPos + t.val.Length); .)
        .
        FIELD<ConfigEntry parent> (. ConfigEntry cur = Root == null ? null : new ConfigEntry(parent); if(Root != null) cur.IsField = true; .) =
            T_IDENT (.
				if(Root != null) {cur.FullStart = cur.NameStart = doc.ContentStart.GetPointerFromCharOffset(t.charPos);
				cur.NameEnd = doc.ContentStart.GetPointerFromCharOffset(t.charPos + t.val.Length);}
			.)
            [
                '['
                ']'
            ]
            '='
            (
                (
                    ARRAY (.
						if(Root != null) {cur.ContentStart = doc.ContentStart.GetPointerFromCharOffset(t.charPos);
						cur.ContentEnd = doc.ContentStart.GetPointerFromCharOffset(t.charPos + t.val.Length);}
					.)
                    |
                    SCALAR (.
						if(Root != null) {cur.ContentStart = doc.ContentStart.GetPointerFromCharOffset(t.charPos);
						cur.ContentEnd = doc.ContentStart.GetPointerFromCharOffset(t.charPos + t.val.Length);}
					.)
                    |
                    STRING (.
						if(Root != null) {cur.ContentStart = doc.ContentStart.GetPointerFromCharOffset(t.charPos);
						cur.ContentEnd = doc.ContentStart.GetPointerFromCharOffset(t.charPos + t.val.Length);}
					.)
                    |
                    BOOLEAN (.
						if(Root != null) {cur.ContentStart = doc.ContentStart.GetPointerFromCharOffset(t.charPos);
						cur.ContentEnd = doc.ContentStart.GetPointerFromCharOffset(t.charPos + t.val.Length);}
					.)
                    |
					(
						ANY (. if(Root != null) cur.ContentStart = doc.ContentStart.GetPointerFromCharOffset(t.charPos); .)
						{
							ANY
						}
						(. if(Root != null) cur.ContentEnd = doc.ContentStart.GetPointerFromCharOffset(t.charPos + t.val.Length); .)
					)
                )
            )
            ';' (. if(Root != null) cur.FullEnd = doc.ContentStart.GetPointerFromCharOffset(t.charPos + t.val.Length); .)
        .
        SCALAR =
            T_SCALAR
            |
            T_HEX
        .
        STRING =
            (
                T_STRING
                |
                T_STRINGTABLESTRING
            )
        .
        BOOLEAN =
            (
                "true"
                |
                "false"
            )
        .
        ARRAY = 
            '{'
            [
				(
					SCALAR
					|
					STRING
					|
					BOOLEAN
				)
				{
					','
					(
						SCALAR
						|
						STRING
						|
						BOOLEAN
					)
				}
			]
            '}'
        .
END CONFIGFILE.
